--- a/styles/warabenture.css
+++ b/styles/warabenture.css
@@ -241,7 +241,7 @@ h1::before {
     width: 64px;            /* 切り抜く画像のサイズ */
     height: 48px;
     zoom:0.5;               /* なんか２倍角なので、目視確認で合わせる。 font-size: xx-large; だから？ */
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -160px 0;
 }
 
@@ -251,7 +251,7 @@ h2::before {
     width: 96px;
     height: 48px;
     zoom:0.4;               /* なんか拡大されてるので、目視確認で合わせる。 font-size: x-large; だから？ */
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -128px 0;
 }
 
@@ -261,7 +261,7 @@ h3::before {
     width: 128px;
     height: 48px;
     zoom:0.4;
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -96px 0;
 }
 
@@ -271,7 +271,7 @@ h4::before {
     width: 160px;
     height: 48px;
     zoom:0.3;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -64px 0;
 }
 
@@ -281,7 +281,7 @@ h5::before {
     width: 192px;
     height: 48px;
     zoom:0.3;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -32px 0;
 }
 
@@ -291,6 +291,6 @@ h6::before {
     width: 224px;
     height: 48px;
     zoom:0.25;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: medium; だから？ */
-    background-image: url('/img/warabenture/six-sharps-light.png');
+    background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: 0px 0;
 }
