--- a/src/styles/warabenture.css
+++ b/src/styles/warabenture.css
@@ -121,6 +121,7 @@ h6::before {
         padding-bottom: 2px;
     }
 
+    /* この sec-n は、単にインデントしたいときに使ってよい。ネストしてもよい。 */
     section.sec-1 {
         margin-left: 24px;
     }
@@ -249,6 +250,7 @@ h6::before {
         padding-bottom: 2px;
     }
 
+    /* この sec-n は、単にインデントしたいときに使ってよい。ネストしてもよい。 */
     section.sec-1 {
         margin-left: 64px;
     }
