--- a/src/styles/perspective.css
+++ b/src/styles/perspective.css
@@ -17,12 +17,12 @@
 
 /* ２段組みの上段 */
 .pane-2-top {
-    height: 50vh;
     position: fixed;
     top: 0;
+    bottom: 50vh;
     left: 0;
     right: 0;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 /* ２段組みの下段 */
@@ -30,6 +30,8 @@
     position: fixed;
     top: 50vh;
     bottom: 0;
+    left: 0;
+    right: 0;
     overflow-y: auto; /* スクロール可能にする */
 }
 
@@ -40,7 +42,7 @@
     bottom: 66vh;
     left: 0;
     right: 0;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 /* ３段組みの中段 */
@@ -50,7 +52,6 @@
     bottom: 33vh;
     left: 0;
     right: 0;
-    z-index: 2;
 }
 
 /* ３段組みの下段 */
@@ -60,5 +61,4 @@
     bottom: 0vh;
     left: 0;
     right: 0;
-    z-index: 3;
 }
