--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -1,3 +1,7 @@
+/**
+ * plugins/vuetify.ts の方にテーマが設定されているので、そちらも見てください。
+ */
+
 h1 {
     background-color: var(--warabenture-sec-1-header-bgcolor, #101010);
     color: var(--warabenture-sec-1-header-fgcolor, #F0F0F0);
@@ -10,115 +14,122 @@ h1 {
 
 /* ヘッダーの先頭に # のアイコンを付ける */
 h1::before {
-    content: "";            /* 指定しないと、画像も表示されない */
-    display:inline-block;
-    width: 64px;            /* 切り抜く画像のサイズ */
+    content: "";    /* 指定しないと、画像も表示されない */
+    display: inline-block;
+    width: 64px;    /* 切り抜く画像のサイズ */
     height: 48px;
-    zoom:0.5;               /* なんか２倍角なので、目視確認で合わせる。 font-size: xx-large; だから？ */
+    zoom: 0.5;  /* なんか２倍角なので、目視確認で合わせる。 font-size: xx-large; だから？ */
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -160px 0;
 }
 
 h2::before {
     content: "";
-    display:inline-block;
+    display: inline-block;
     width: 96px;
     height: 48px;
-    zoom:0.4;               /* なんか拡大されてるので、目視確認で合わせる。 font-size: x-large; だから？ */
+    zoom: 0.4;  /* なんか拡大されてるので、目視確認で合わせる。 font-size: x-large; だから？ */
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -128px 0;
 }
 
 h3::before {
     content: "";
-    display:inline-block;
+    display: inline-block;
     width: 128px;
     height: 48px;
-    zoom:0.4;
+    zoom: 0.4;
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -96px 0;
 }
 
 h4::before {
     content: "";
-    display:inline-block;
+    display: inline-block;
     width: 160px;
     height: 48px;
-    zoom:0.3;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
+    zoom: 0.3;  /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -64px 0;
 }
 
 h5::before {
     content: "";
-    display:inline-block;
+    display: inline-block;
     width: 192px;
     height: 48px;
-    zoom:0.3;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
+    zoom: 0.3;  /* なんか拡大されてるので、目視確認で合わせる。 font-size: large; だから？ */
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: -32px 0;
 }
 
 h6::before {
     content: "";
-    display:inline-block;
+    display: inline-block;
     width: 224px;
     height: 48px;
-    zoom:0.25;       /* なんか拡大されてるので、目視確認で合わせる。 font-size: medium; だから？ */
+    zoom: 0.25; /* なんか拡大されてるので、目視確認で合わせる。 font-size: medium; だから？ */
     background-image: var(--warabenture-img-six-sharps, url('/img/warabenture/six-sharps-light.png'));
     background-position: 0px 0;
 }
 
-/* スマホ向けスタイル (画面幅が768px以下) */
+/* スマホ向けスタイル (画面幅が768px以下)
+ * PC版に比べ、margin-left を 1/3。
+ */
 @media screen and (max-width: 768px) {
     h2 {
-        background-color: var(--warabenture-sec-2-header-bgcolor, #101010);
-        color: var(--warabenture-sec-2-header-fgcolor, #F0F0F0);
-        font-size: x-large;
         margin-left: 20px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: x-large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-2-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-2-header-bgcolor, #101010);
     }
 
     h3 {
-        background-color: var(--warabenture-sec-3-header-bgcolor, #181818);
-        color: var(--warabenture-sec-3-header-fgcolor, #F0F0F0);
-        font-size: x-large;
         margin-left: 40px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: x-large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-3-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-3-header-bgcolor, #181818);
     }
 
     h4 {
-        background-color: var(--warabenture-sec-4-header-bgcolor, #202020);
-        color: var(--warabenture-sec-4-header-fgcolor, #F0F0F0);
-        font-size: large;
         margin-left: 60px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-4-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-4-header-bgcolor, #202020);
     }
 
     h5 {
-        background-color: var(--warabenture-sec-5-header-bgcolor, #282828);
-        color: var(--warabenture-sec-5-header-fgcolor, #F0F0F0);
-        font-size: large;
         margin-left: 80px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-5-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-5-header-bgcolor, #282828);
     }
 
     h6 {
-        background-color: var(--warabenture-sec-6-header-bgcolor, #303030);
-        color: var(--warabenture-sec-6-header-fgcolor, #F0F0F0);
-        font-size: medium;
         margin-left: 100px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: medium;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-6-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-6-header-bgcolor, #303030);
     }
 
     section.sec-1 {
@@ -200,53 +211,58 @@ h6::before {
 /* パソコン向けスタイル (画面幅が769px以上) */
 @media screen and (min-width: 769px) {
     h2 {
-        background-color: var(--warabenture-sec-2-header-bgcolor, #101010);
-        color: var(--warabenture-sec-2-header-fgcolor, #F0F0F0);
-        font-size: x-large;
         margin-left: 60px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: x-large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-2-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-2-header-bgcolor, #101010);
     }
 
     h3 {
-        background-color: var(--warabenture-sec-3-header-bgcolor, #181818);
-        color: var(--warabenture-sec-3-header-fgcolor, #F0F0F0);
-        font-size: x-large;
         margin-left: 120px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: x-large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-3-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-3-header-bgcolor, #181818);
     }
 
     h4{
-        background-color: var(--warabenture-sec-4-header-bgcolor, #202020);
-        color: var(--warabenture-sec-4-header-fgcolor, #F0F0F0);
-        font-size: large;
         margin-left: 180px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-4-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-4-header-bgcolor, #202020);
     }
 
     h5 {
-        background-color: var(--warabenture-sec-5-header-bgcolor, #282828);
-        color: var(--warabenture-sec-5-header-fgcolor, #F0F0F0);
-        font-size: large;
         margin-left: 240px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: large;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-5-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-5-header-bgcolor, #282828);
     }
 
     h6 {
-        background-color: var(--warabenture-sec-6-header-bgcolor, #303030);
-        color: var(--warabenture-sec-6-header-fgcolor, #F0F0F0);
-        font-size: medium;
         margin-left: 300px;
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
+        font-size: medium;
+        overflow-wrap: break-word;
+        color: var(--warabenture-sec-6-header-fgcolor, #F0F0F0);
+        background-color: var(--warabenture-sec-6-header-bgcolor, #303030);
     }
 
     section.sec-1 {
