WIP: インデント再編集中

--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -138,6 +138,10 @@ h6::before {
         background-color: var(--myapplication-sec-6-header-bgcolor, #303030);
     }
 
+    section.sec-0 {
+        margin-left: calc(20px + 4px);
+    }
+
     section.sec-1 {
         margin-left: calc(40px + 4px);
     }
@@ -160,6 +164,12 @@ h6::before {
 
     section.sec-6 {
         margin-left: calc(140px + 4px);
+    }
+
+    .sec-0 img {
+        max-width: 300px;
+        max-height: 300px;
+        object-fit: contain; /* 画像が枠に収まるように調整 */
     }
 
     .sec-1 img {
@@ -282,6 +292,10 @@ h6::before {
         background-color: var(--myapplication-sec-6-header-bgcolor, #303030);
     }
 
+    section.sec-0 {
+        margin-left: calc(60px + 4px);
+    }
+
     section.sec-1 {
         margin-left: calc(120px + 4px);
     }
@@ -304,6 +318,12 @@ h6::before {
 
     section.sec-6 {
         margin-left: calc(420px + 4px);
+    }
+
+    .sec-0 img {
+        max-width: 1024px;  /* PCなので比較的大きなサイズ */
+        max-height: 1024px;
+        object-fit: contain; /* 画像が枠に収まるように調整 */
     }
 
     .sec-1 img {
