目次に戻るボタン追加、インデント変更

--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -2,6 +2,10 @@
  * plugins/vuetify.ts の方にテーマが設定されているので、そちらも見てください。
  */
 
+html {
+  scroll-behavior: smooth;  /* <a href="#top"> アンカーで飛ぶときのスクロールをスムーズにする */
+}
+
 div.v-toolbar__content {    /* アプリケーション・バー */
     color: var(--myapplication-sec-0-header-fgcolor, #F0F0F0);
     background-color: var(--myapplication-sec-0-header-bgcolor, #282828);
@@ -89,7 +93,7 @@ span.parent-header-lights-out {
  */
 @media screen and (max-width: 768px) {
     h1 {
-        margin-left: 20px;
+        margin-left: calc(0 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -100,7 +104,7 @@ span.parent-header-lights-out {
     }
 
     h2 {
-        margin-left: 40px;
+        margin-left: calc(1 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -111,7 +115,7 @@ span.parent-header-lights-out {
     }
 
     h3 {
-        margin-left: 60px;
+        margin-left: calc(2 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -122,7 +126,7 @@ span.parent-header-lights-out {
     }
 
     h4 {
-        margin-left: 80px;
+        margin-left: calc(3 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -133,7 +137,7 @@ span.parent-header-lights-out {
     }
 
     h5 {
-        margin-left: 100px;
+        margin-left: calc(4 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -144,7 +148,7 @@ span.parent-header-lights-out {
     }
 
     h6 {
-        margin-left: 120px;
+        margin-left: calc(5 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -155,7 +159,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-1 {
-        margin-left: 20px;
+        margin-left: calc(0 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -165,7 +169,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-2 {
-        margin-left: 40px;
+        margin-left: calc(1 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -175,7 +179,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-3 {
-        margin-left: 60px;
+        margin-left: calc(2 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -185,7 +189,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-4 {
-        margin-left: 80px;
+        margin-left: calc(3 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -195,7 +199,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-5 {
-        margin-left: 100px;
+        margin-left: calc(4 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -205,7 +209,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-6 {
-        margin-left: 120px;
+        margin-left: calc(5 * 20px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -215,31 +219,31 @@ span.parent-header-lights-out {
     }
 
     section.sec-0 {
-        margin-left: calc(20px + 4px);
+        margin-left: calc(0 * 20px + 4px);
     }
 
     section.sec-1 {
-        margin-left: calc(40px + 4px);
+        margin-left: calc(1 * 20px + 4px);
     }
 
     section.sec-2 {
-        margin-left: calc(60px + 4px);
+        margin-left: calc(2 * 20px + 4px);
     }
 
     section.sec-3 {
-        margin-left: calc(80px + 4px);
+        margin-left: calc(3 * 20px + 4px);
     }
 
     section.sec-4 {
-        margin-left: calc(100px + 4px);
+        margin-left: calc(4 * 20px + 4px);
     }
 
     section.sec-5 {
-        margin-left: calc(120px + 4px);
+        margin-left: calc(5 * 20px + 4px);
     }
 
     section.sec-6 {
-        margin-left: calc(140px + 4px);
+        margin-left: calc(6 * 20px + 4px);
     }
 
     .sec-0 img {
@@ -303,7 +307,7 @@ span.parent-header-lights-out {
 /* パソコン向けスタイル (画面幅が769px以上) */
 @media screen and (min-width: 769px) {
     h1 {
-        margin-left: 60px;
+        margin-left: calc(0 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -314,7 +318,7 @@ span.parent-header-lights-out {
     }
 
     h2 {
-        margin-left: 120px;
+        margin-left: calc(1 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -325,7 +329,7 @@ span.parent-header-lights-out {
     }
 
     h3 {
-        margin-left: 180px;
+        margin-left: calc(2 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -336,7 +340,7 @@ span.parent-header-lights-out {
     }
 
     h4{
-        margin-left: 240px;
+        margin-left: calc(3 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -347,7 +351,7 @@ span.parent-header-lights-out {
     }
 
     h5 {
-        margin-left: 300px;
+        margin-left: calc(4 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -358,7 +362,7 @@ span.parent-header-lights-out {
     }
 
     h6 {
-        margin-left: 360px;
+        margin-left: calc(5 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -369,7 +373,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-1 {
-        margin-left: 60px;
+        margin-left: calc(0 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -379,7 +383,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-2 {
-        margin-left: 120px;
+        margin-left: calc(1 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -389,7 +393,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-3 {
-        margin-left: 180px;
+        margin-left: calc(2 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -399,7 +403,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-4{
-        margin-left: 240px;
+        margin-left: calc(3 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -409,7 +413,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-5 {
-        margin-left: 300px;
+        margin-left: calc(4 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -419,7 +423,7 @@ span.parent-header-lights-out {
     }
 
     div.contents-header-6 {
-        margin-left: 360px;
+        margin-left: calc(5 * 60px);
         padding-left: 4px;
         padding-top: 6px;
         padding-bottom: 2px;
@@ -429,31 +433,31 @@ span.parent-header-lights-out {
     }
 
     section.sec-0 {
-        margin-left: calc(60px + 4px);
+        margin-left: calc(0 * 60px + 4px);
     }
 
     section.sec-1 {
-        margin-left: calc(120px + 4px);
+        margin-left: calc(1 * 60px + 4px);
     }
 
     section.sec-2 {
-        margin-left: calc(180px + 4px);
+        margin-left: calc(2 * 60px + 4px);
     }
 
     section.sec-3 {
-        margin-left: calc(240px + 4px);
+        margin-left: calc(3 * 60px + 4px);
     }
 
     section.sec-4 {
-        margin-left: calc(300px + 4px);
+        margin-left: calc(4 * 60px + 4px);
     }
 
     section.sec-5 {
-        margin-left: calc(360px + 4px);
+        margin-left: calc(5 * 60px + 4px);
     }
 
     section.sec-6 {
-        margin-left: calc(420px + 4px);
+        margin-left: calc(6 * 60px + 4px);
     }
 
     .sec-0 img {
