WIP: ゲームマシン　＞　コンポーネント化　＞　position の fixed を absolute へ変更

--- a/src/styles/game-machine-waratch2.css
+++ b/src/styles/game-machine-waratch2.css
@@ -1,6 +1,6 @@
 /* ハード領域 */
 div.waratch2-hard {
-    position: fixed;
+    position: absolute;
     border: solid 4px black;
     box-sizing: border-box;
     border-radius: 64px;
